# Supercomputers

./: README.md
Lab1/: CMakeLists.txt  RayTrassingTest.ipynb  methodical_manual_task_19ex.cpp  methodical_manual_task_2ex.cpp  minirt_test_openmp.cpp
Lab3/: model_problem_with_given_solution  model_problem_with_given_solution.cpp  submit.sh.o5512481  submit.sh.o5512482  submit.sh.o5512483  submit.sh.o5512487  submit.sh.o5512488
Lab4/: first_part.cpp  second_part.cpp
